--- a/lista.css
+++ b/lista.css
@@ -14,12 +14,49 @@ body {
     font-size: 15px;
 }
 
-form {
+#form-container {
     z-index: 10;
-    padding: 20px;
     background-color: #fff;
     width: 100%;
     position: relative;
+}
+
+.mobile-option {
+    display: none;
+    text-transform: uppercase;
+    padding: 20px;
+}
+
+#show-filters {
+    cursor: pointer;
+}
+
+#hide-filters {
+    color: #fff;
+    font-size: 40px;
+    text-align: center;
+    text-shadow: 0px 0px 20px #000;
+    cursor: pointer;
+}
+
+form {
+    padding: 20px;
+}
+
+select, input {
+    background-color: #fff;
+    border: 1px solid #bbb;
+    padding: 10px;
+    border-radius: 0;
+    margin: 2px;
+    font-family: consolas, monospace;
+    font-size: 12px;
+}
+
+#loading {
+    font-size: 100px;
+    text-align: center;
+    display: none;
 }
 
 #container-wrapper {
@@ -284,6 +321,32 @@ img {
 
     #popup-navigation-container {
         display: block;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    /* PENDIENTE */
+    .mobile-option {
+        display: block;
+    }
+
+    form {
+        display: none;
+
+        /*display: inline-grid;*/
+        top: 0;
+        position: fixed;
+        background-color: #000c;
+        width: 100%;
+        height: 100%;
+        z-index: 11;
+    }
+
+    select, input {
+        display: block;
+        min-width: 200px;
+        margin: 22px auto;
+        width: 60%;
     }
 }
 
